--- a/index.html
+++ b/index.html
@@ -7,8 +7,21 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="controls"></div>
-  <canvas id="game"></canvas>
-  <script type="module" src="main.js"></script>
+  <div id="preloader" class="preloader">
+    <div class="logo">One Line Draw</div>
+    <div class="bar"><div class="progress"></div></div>
+  </div>
+
+  <div id="title" class="title hidden">
+    <h1>One Line Draw</h1>
+    <button id="startBtn"></button>
+  </div>
+
+  <div id="game" class="game hidden">
+    <div class="hud"><span id="hearts"></span></div>
+    <svg id="board" tabindex="0"></svg>
+  </div>
+
+  <script type="module" src="game.js"></script>
 </body>
 </html>
