feat: add progress storage module

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <option value="classic">Classic</option>
       <option value="timed">Timed</option>
       <option value="moves">Moves</option>
+      <option value="daily">Daily</option>
       <option value="zen">Zen</option>
     </select>
     <button id="startBtn"></button>
