feat: improve accessibility and keyboard controls

--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
   <title>One Line Draw</title>
   <link rel="stylesheet" href="styles.css">
 </head>
-<body>
-  <div id="preloader" class="preloader">
-    <div class="logo">One Line Draw</div>
-    <div class="bar"><div class="progress"></div></div>
-  </div>
+  <body>
+    <div id="announcer" class="visually-hidden" aria-live="assertive"></div>
+    <div id="preloader" class="preloader">
+      <div class="logo">One Line Draw</div>
+      <div class="bar"><div class="progress"></div></div>
+    </div>
 
   <div id="title" class="title hidden">
     <h1>One Line Draw</h1>
